--- a/index.html
+++ b/index.html
@@ -1,12 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Krishna</title>
 </head>
+<link rel="stylesheet" href="./style.css">
 <body>
-    IN progress..
+    <div id="nav-menu">
+        <a href="#home" class="nav-link home">Home</a>
+        <a href="#about" class="nav-link about">About</a>
+        <a href="#skills" class="nav-link skills">Skills</a>
+        <a href="#projects" class="nav-link projects">Projects</a>
+        <a href="#contact" class="nav-link contact">Contact</a>
+        <a href="#" class="nav-link resume" id="resume-link-2">Resume</a>
+    </div>
+    <div id="home">
+        <img src="" alt="" class="home-img">
+        <h1 id="user-detail-name"></h1>
+        <p id="user-detail-intro"></p>
+        <a href="#" id="resume-link-1">Resume</a>
+    </div>
+    <div id="about" class="about div">
+        <!-- content -->
+    </div>
+    <div id="skills">
+        <div class="skills-card">
+            <img src="" alt="" class="skills-card-img">
+            <h3 class="skills-card-name"></h3>
+        </div>
+    </div>
+    <div id="projects">
+        <div class="project-card">
+            <img src="" alt="">
+            <h3 class="project-title"></h3>
+            <p class="project-description"></p>
+            <p class="project-tech-stack"></p>
+            <a href="" class="project-github-link">GitHub Repository</a>
+            <a href="" class="project-deployed-link">Deployed Link/Video</a>
+        </div>
+    </div>
+    <div id="contact">
+        <a href="" id="contact-github">GitHub</a>
+        <a href="" id="contact-linkedin">LinkedIn</a>
+        <p id="contact-phone"></p>
+        <p id="contact-email"></p>
+    </div>
+    <div id="resume">
+        <button id="resume-button-1">Download Resume</button>
+        <div class="react-activity-calendar"></div>
+        <img src="" alt="" id="github-streak-stats">
+        <img src="" alt="" id="github-top-langs">
+        <img src="" alt="" id="github-stats-card">
+    </div>
 </body>
 </html>
