--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Krishna</title>
 </head>
 <link rel="stylesheet" href="./style.css">
+
 <body>
     <div id="nav-menu">
         <a href="#home" class="nav-link home">Home</a>
@@ -18,18 +19,78 @@
         <a href="#" class="nav-link resume" id="resume-link-2">Resume</a>
     </div>
     <div id="home">
-        <img src="" alt="" class="home-img">
-        <h1 id="user-detail-name"></h1>
-        <p id="user-detail-intro"></p>
-        <a href="#" id="resume-link-1">Resume</a>
+        <img src="./profile.png" alt="" class="home-img">
+        <h3>Hi there!</h3>
+        <h1 id="user-detail-name">I'm Krishna</h1>
+        <p id="user-detail-intro">A self-motivated, hard-working and ambitious Web Developer with proficiency in
+            JavaScript, Node.js, Express.js, MongoDB, Mongoose, HTML and CSS. Problem-solving mindset and the ability to
+            perform well in collaboration.</p>
+        <a href="./download/Krishna_Resume.pdf" download id="resume-link-2">
+            <button id="resume-button-2">Resume</button>
+        </a>
     </div>
     <div id="about" class="about div">
         <!-- content -->
     </div>
     <div id="skills">
-        <div class="skills-card">
-            <img src="" alt="" class="skills-card-img">
-            <h3 class="skills-card-name"></h3>
+        <h1 class="heading-skill">My <span>Skills</span></h1>
+        <div class="box-container">
+            <!-- <div class="main"> -->
+            <div class="box skills-card">
+                <img class="skills-card-img"
+                    src="https://imgs.search.brave.com/ONyyr8kaz7jLCbei6YDUhVPY5NtLtY93qGBA5IoKkew/rs:fit:800:800:1/g:ce/aHR0cHM6Ly9wNy5o/aWNsaXBhcnQuY29t/L3ByZXZpZXcvMzA2/LzM3LzE2Ny9ub2Rl/LWpzLWphdmFzY3Jp/cHQtd2ViLWFwcGxp/Y2F0aW9uLWV4cHJl/c3MtanMtY29tcHV0/ZXItc29mdHdhcmUt/b3RoZXJzLmpwZw"
+                    alt="" />
+                <h3 class="skills-card-name">Node.js</h3>
+            </div>
+            <div class="box skills-card">
+                <img class="skills-card-img"
+                    src="https://imgs.search.brave.com/3zyf8MwTySSV1u97JOmnQ9kOm9MQxKJTNHDQn9153Dc/rs:fit:750:750:1/g:ce/aHR0cHM6Ly9yZXMu/Y2xvdWRpbmFyeS5j/b20vbHdnYXRzYnkv/Zl9hdXRvL3d3dy91/cGxvYWRzLzIwMjAv/MTEvbW9uZ29kYi5w/bmc"
+                    alt="" />
+                <h3 class="skills-card-name">MongoDB</h3>
+            </div>
+            <div class="box skills-card">
+                <img class="skills-card-img"
+                    src="https://imgs.search.brave.com/OJqj0MvCdchdbDCwbvju-sDde9bdJ-iE_znYVVvlbaY/rs:fit:900:900:1/g:ce/aHR0cHM6Ly9saWJy/YXJ5Lmtpc3NjbGlw/YXJ0LmNvbS8yMDE4/MTEyMy9veXEva2lz/c2NsaXBhcnQtc3Fs/LWRiLWNsaXBhcnQt/bWljcm9zb2Z0LWF6/dXJlLXNxbC1kYXRh/YmFzZS1kOGZlODZh/ZmQ3N2VlMTI0Lmpw/Zw"
+                    alt="" />
+                <h3 class="skills-card-name">SQL</h3>
+            </div>
+            <div class="box skills-card">
+                <img class="skills-card-img"
+                    src="https://imgs.search.brave.com/SL3i7a57uH3nMKgWOutVaVYQ1RCPqq4rTbP6J33xfAM/rs:fit:750:1000:1/g:ce/aHR0cHM6Ly9paDEu/cmVkYnViYmxlLm5l/dC9pbWFnZS40Mzg5/MDgyNDQuNjE0NC9i/ZyxmOGY4ZjgtZmxh/dCw3NTB4LDA3NSxm/LXBhZCw3NTB4MTAw/MCxmOGY4ZjgudTIu/anBn"
+                    alt="" />
+                <h3 class="skills-card-name">Express.js</h3>
+            </div>
+            <div class="box skills-card">
+                <img class="skills-card-img" src="GitHub-Mark.png" alt="" />
+                <h3 class="skills-card-name">Github</h3>
+            </div>
+            <div class="box skills-card">
+                <img class="skills-card-img" src="https://chiranjeev-thapliyal.vercel.app/svg/amazon-web-services.svg"
+                    alt="" />
+                <h3 class="skills-card-name">AWS</h3>
+            </div>
+            <div class="box skills-card">
+                <img class="skills-card-img"
+                    src="https://portfolio-saravanakumarjn.vercel.app/static/media/html_5.e7638e36.svg" alt="" />
+                <h3 class="skills-card-name">HTML</h3>
+            </div>
+            <div class="box skills-card">
+                <img class="skills-card-img"
+                    src="https://portfolio-saravanakumarjn.vercel.app/static/media/css_3.e7a9de36.svg" alt="" />
+                <h3 class="skills-card-name">CSS3</h3>
+            </div>
+            <div class="box skills-card">
+                <img class="skills-card-img"
+                    src="https://portfolio-saravanakumarjn.vercel.app/static/media/javascript.fd46ca41.svg" alt="" />
+                <h3 class="skills-card-name">JavaScript</h3>
+            </div>
+            <div class="box skills-card">
+                <img class="skills-card-img"
+                    src="https://media.istockphoto.com/vectors/flowchart-icon-on-a-black-background-vector-id488916446?k=20&m=488916446&s=612x612&w=0&h=OQeEPHSxRq_wKF4bF_crFzzcTeK0aqQBaevYYIGHTIw="
+                    alt="" />
+                <h3 class="skills-card-name">DSA</h3>
+            </div>
+            <!-- </div> -->
         </div>
     </div>
     <div id="projects">
@@ -38,22 +99,61 @@
             <h3 class="project-title"></h3>
             <p class="project-description"></p>
             <p class="project-tech-stack"></p>
-            <a href="" class="project-github-link">GitHub Repository</a>
-            <a href="" class="project-deployed-link">Deployed Link/Video</a>
+            <a target="_blank" href="" class="project-github-link">GitHub Repository</a>
+            <a target="_blank" href="" class="project-deployed-link">Deployed Link/Video</a>
+        </div>
+        <div class="project-card">
+            <img src="" alt="">
+            <h3 class="project-title"></h3>
+            <p class="project-description"></p>
+            <p class="project-tech-stack"></p>
+            <a target="_blank" href="" class="project-github-link">GitHub Repository</a>
+            <a target="_blank" href="" class="project-deployed-link">Deployed Link/Video</a>
+        </div>
+        <div class="project-card">
+            <img src="" alt="">
+            <h3 class="project-title"></h3>
+            <p class="project-description"></p>
+            <p class="project-tech-stack"></p>
+            <a target="_blank" href="" class="project-github-link">GitHub Repository</a>
+            <a target="_blank" href="" class="project-deployed-link">Deployed Link/Video</a>
         </div>
     </div>
     <div id="contact">
-        <a href="" id="contact-github">GitHub</a>
-        <a href="" id="contact-linkedin">LinkedIn</a>
-        <p id="contact-phone"></p>
-        <p id="contact-email"></p>
+        <a target="_blank" href="https://github.com/Krishna-7777" id="contact-github">GitHub</a>
+        <a target="_blank" href="https://www.linkedin.com/in/-krishna-chhabra/" id="contact-linkedin">LinkedIn</a>
+        <p id="contact-phone">9891912498</p>
+        <p id="contact-email">krishna.chhabra.365@gmail.com</p>
     </div>
     <div id="resume">
-        <button id="resume-button-1">Download Resume</button>
-        <div class="react-activity-calendar"></div>
-        <img src="" alt="" id="github-streak-stats">
-        <img src="" alt="" id="github-top-langs">
-        <img src="" alt="" id="github-stats-card">
+        <a href="./download/Krishna_Resume.pdf" download id="resume-link-1">
+            <button id="resume-button-1">Resume</button>
+        </a>
+        <div class="react-activity-calendar">
+            <img src="https://ghchart.rshah.org/Krishna-7777" alt="2016rshah's Github chart" />
+        </div>
+        <p align="center"><img align="center" id="github-streak-stats"
+                src="https://github-readme-stats.vercel.app/api/top-langs?username=krishna-7777&show_icons=true&locale=en&layout=compact"
+                alt="krishna-7777" /></p>
+
+        <p align="center">&nbsp;<img align="center" id="github-top-langs"
+                src="https://github-readme-stats.vercel.app/api?username=krishna-7777&show_icons=true&locale=en"
+                alt="krishna-7777" /></p>
+
+        <p align="center"><img align="center" id="github-stats-card" src="https://github-readme-streak-stats.herokuapp.com/?user=krishna-7777&"
+                alt="krishna-7777" /></p>
+        
     </div>
 </body>
+
 </html>
+<script>
+    document.getElementById("resume-button-2").onclick = () => {
+        open("https://drive.google.com/file/d/1Es0-sMzus0zE1o_HhQLoIhi3w6I_naSF/view?usp=share_link");
+    }
+    document.getElementById("resume-button-1").onclick = () => {
+        open("https://drive.google.com/file/d/1Es0-sMzus0zE1o_HhQLoIhi3w6I_naSF/view?usp=share_link");
+    }
+
+
+</script>
