--- a/index.html
+++ b/index.html
@@ -118,6 +118,14 @@
             <a target="_blank" href="" class="project-github-link">GitHub Repository</a>
             <a target="_blank" href="" class="project-deployed-link">Deployed Link/Video</a>
         </div>
+        <div class="project-card">
+            <img src="" alt="">
+            <h3 class="project-title"></h3>
+            <p class="project-description"></p>
+            <p class="project-tech-stack"></p>
+            <a target="_blank" href="" class="project-github-link">GitHub Repository</a>
+            <a target="_blank" href="" class="project-deployed-link">Deployed Link/Video</a>
+        </div>
     </div>
     <div id="contact">
         <a target="_blank" href="https://github.com/Krishna-7777" id="contact-github">GitHub</a>
@@ -132,15 +140,15 @@
         <div class="react-activity-calendar">
             <img src="https://ghchart.rshah.org/Krishna-7777" alt="2016rshah's Github chart" />
         </div>
-        <p align="center"><img align="center" id="github-streak-stats"
+        <p align="center"><img align="center" id="github-top-langs"
                 src="https://github-readme-stats.vercel.app/api/top-langs?username=krishna-7777&show_icons=true&locale=en&layout=compact"
                 alt="krishna-7777" /></p>
 
-        <p align="center">&nbsp;<img align="center" id="github-top-langs"
+        <p align="center">&nbsp;<img align="center" id="github-stats-card"
                 src="https://github-readme-stats.vercel.app/api?username=krishna-7777&show_icons=true&locale=en"
                 alt="krishna-7777" /></p>
 
-        <p align="center"><img align="center" id="github-stats-card" src="https://github-readme-streak-stats.herokuapp.com/?user=krishna-7777&"
+        <p align="center"><img align="center" id="github-streak-stats" src="https://github-readme-streak-stats.herokuapp.com/?user=krishna-7777&"
                 alt="krishna-7777" /></p>
         
     </div>
