--- a/index.html
+++ b/index.html
@@ -157,16 +157,16 @@
         <p align="center"> <img align="center" class="react-activity-calendar"
                 src="https://ghchart.rshah.org/Krishna-7777" alt="2016rshah's Github chart" /></p>
     </div>
-    <div id="github-stuff">
-        <p align="center"><img align="center" id="github-streak-stats"
-                src="https://github-readme-streak-stats.herokuapp.com/?user=krishna-7777&" alt="krishna-7777" /></p>
-        <p align="center"><img align="center" id="github-top-langs"
-                src="https://github-readme-stats.vercel.app/api/top-langs?username=krishna-7777&show_icons=true&locale=en&layout=compact"
-                alt="krishna-7777" /></p>
-
-        <p align="center">&nbsp;<img align="center" id="github-stats-card"
-                src="https://github-readme-stats.vercel.app/api?username=krishna-7777&show_icons=true&locale=en"
-                alt="krishna-7777" /></p>
+    <div class="streaks" id="github-stuff">
+        <div >
+            <a href="https://git.io/streak-stats"><img id="github-streak-stats" src="https://github-readme-streak-stats.herokuapp.com?user=Krishna-7777"/></a>
+        </div>
+        <div >
+            <a href="https://git.io/streak-stats"><img id="github-top-langs" src="https://github-readme-stats.vercel.app/api/top-langs/?username=Krishna-7777&layout=compact"/></a>
+        </div>
+        <div >
+            <a href="https://git.io/streak-stats"><img id="github-stats-card" src="https://github-readme-stats.vercel.app/api?username=Krishna-7777&show_icons=true&theme=transparent"/></a>
+        </div>
     </div>
 <div id="contact">
         <h2 class="heading">Contact Me</h2>
