--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 
     <h2 class="heading">Github Stats</h2>
     <div class="react-activity-calendar">
-        <p align="center"> <img align="center" class="react-activity-calendar"
+        <p align="center"> <img align="center" 
                 src="https://ghchart.rshah.org/Krishna-7777" alt="2016rshah's Github chart" /></p>
     </div>
     <div class="streaks" id="github-stuff">
