--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
 
         <div id="nav-menu">
+            <i class="fa-solid fa-bars" id="ham"></i>
             <a href="#home" class="nav-link home">Home</a>
             <a href="#about" class="nav-link about">About Me</a>
             <a href="#skills" class="nav-link skills">Skills</a>
@@ -106,13 +107,14 @@
             <!-- </div> -->
         </div>
     </div>
-    <h2 class="heading">My Projects</h1>
     <div id="projects">
+    <h2 class="heading">My Projects</h1>
+        <div>
         <div class="project-card">
             <img src="https://github.com/Krishna-7777/fertile-butter-5929/raw/main/screenshots/home.PNG" alt="">
             <h3 class="project-title">Fash.com</h3>
             <p class="project-description">A clone of a fashion e-commerce website named Myntra.com</p>
-            <p class="project-tech-stack">HTML,CSS,JavaScript,Node.js,Express.js,Mongoose,MongoDB,Bcrypt,JsonWebToken
+            <p class="project-tech-stack">HTML, CSS, JavaScript, Node.js, Express.js, Mongoose, MongoDB, Bcrypt, JsonWebToken
             </p>
             <a target="_blank" href="https://github.com/Krishna-7777/fertile-butter-5929"
                 class="project-github-link">GitHub Repository</a>
@@ -122,7 +124,7 @@
             <img src="https://github.com/Krishna-7777/fertile-butter-5929/raw/main/screenshots/home.PNG" alt="">
             <h3 class="project-title">Fash.com</h3>
             <p class="project-description">A clone of a fashion e-commerce website named Myntra.com</p>
-            <p class="project-tech-stack">HTML,CSS,JavaScript,Node.js,Express.js,Mongoose,MongoDB,Bcrypt,JsonWebToken
+            <p class="project-tech-stack">HTML, CSS, JavaScript, Node.js, Express.js, Mongoose, MongoDB, Bcrypt, JsonWebToken
             </p>
             <a target="_blank" href="https://github.com/Krishna-7777/fertile-butter-5929"
                 class="project-github-link">GitHub Repository</a>
@@ -132,7 +134,7 @@
             <img src="https://github.com/Krishna-7777/fertile-butter-5929/raw/main/screenshots/home.PNG" alt="">
             <h3 class="project-title">Fash.com</h3>
             <p class="project-description">A clone of a fashion e-commerce website named Myntra.com</p>
-            <p class="project-tech-stack">HTML,CSS,JavaScript,Node.js,Express.js,Mongoose,MongoDB,Bcrypt,JsonWebToken
+            <p class="project-tech-stack">HTML, CSS, JavaScript, Node.js, Express.js, Mongoose, MongoDB, Bcrypt, JsonWebToken
             </p>
             <a target="_blank" href="https://github.com/Krishna-7777/fertile-butter-5929"
                 class="project-github-link">GitHub Repository</a>
@@ -142,13 +144,13 @@
             <img src="https://github.com/Krishna-7777/fertile-butter-5929/raw/main/screenshots/home.PNG" alt="">
             <h3 class="project-title">Fash.com</h3>
             <p class="project-description">A clone of a fashion e-commerce website named Myntra.com</p>
-            <p class="project-tech-stack">HTML,CSS,JavaScript,Node.js,Express.js,Mongoose,MongoDB,Bcrypt,JsonWebToken
+            <p class="project-tech-stack">HTML, CSS, JavaScript, Node.js, Express.js, Mongoose, MongoDB, Bcrypt, JsonWebToken
             </p>
             <a target="_blank" href="https://github.com/Krishna-7777/fertile-butter-5929"
                 class="project-github-link">GitHub Repository</a>
             <a target="_blank" href="https://fash-com.netlify.app/" class="project-deployed-link">Deployed Link</a>
         </div>
-    </div>
+        </div></div>
     
     
 
@@ -188,6 +190,19 @@
     document.getElementById("resume-button-1").onclick = () => {
         open("https://drive.google.com/file/d/1Es0-sMzus0zE1o_HhQLoIhi3w6I_naSF/view?usp=share_link");
     }
-
+    let arr=document.querySelectorAll("#nav-menu a");
+    document.getElementById("ham").addEventListener('click',()=>{
+        for(let i of arr){
+            i.classList.toggle('active')
+        }
+        document.querySelector("#home h1").setAttribute('style','padding-top:20%')
+    })
+    for(let i of arr){
+            i.addEventListener('click',()=>{
+                for(let i of arr){
+            i.classList.toggle('active')
+        }
+            })
+        }
 
 </script>
