Fixed Class name

--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
         </div>
     </div>
     <div id="home">
-        <h1 id="user-detail-name">Krishna Chhabra</h1>
+        <h1 >Krishna Chhabra</h1>
         <h2>Full-Stack Web Developer</h2>
         <a href="./download/Krishna_Resume.pdf" download id="resume-link-2">
             <button id="resume-button-2">Resume<i class="fa-solid fa-file-arrow-down"></i></button>
         </a>
     </div>
-    <div id="about" class="about div">
-        <h2>About Me</h2>
+    <div id="about" class="about section">
+        <h2  id="user-detail-name">About Me</h2>
         <img src="./profile.png" alt="" class="home-img">
         <!-- <h1 >I'm Krishna Chhabra</h1> -->
         <p id="user-detail-intro">A self-motivated, hard-working and ambitious Web Developer with proficiency in
