changed color of calender

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
     <h2 class="heading">Github Stats</h2>
     <div class="react-activity-calendar">
         <p align="center"> <img align="center" 
-                src="https://ghchart.rshah.org/Krishna-7777" alt="2016rshah's Github chart" /></p>
+                src="https://ghchart.rshah.org/00aeff/Krishna-7777" alt="2016rshah's Github chart" /></p>
     </div>
     <div class="streaks" id="github-stuff">
         <div >
